// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PreviewImage /> renders correctly 1`] = `
<Memo()
  onLoad={[Function]}
  url="https://img"
/>
`;

exports[`<PreviewImage /> renders correctly with optional props 1`] = `
<Memo()
  className="preview"
  onLoad={[Function]}
  url="https://img"
/>
`;
